<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cod_layout">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetStartWithNavigation="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="45dp"
        android:scrollbars="none"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <RelativeLayout
                android:id="@+id/llAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:clickable="false">

                <TextView
                    android:id="@+id/tvAdrs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/delevering_food_to"
                    android:textSize="10sp"
                    android:textAllCaps="true"/>

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvAdrs"
                    android:layout_toLeftOf="@+id/tvChange"
                    android:drawableLeft="@drawable/ic_check_circle_green"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:text="Address"
                    android:textSize="12sp"
                    android:maxLines="2"
                    android:ellipsize="end"/>

                <TextView
                    android:id="@+id/tvChange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:text="@string/change"
                    android:textSize="10sp"
                    android:textAllCaps="true"
                    android:textColor="@color/green"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/login_edittext_undrln_color"/>

            <LinearLayout
                android:id="@+id/llPayments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:clickable="false"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/payment_methods"
                    android:textSize="10sp"
                    android:textAllCaps="true"/>

                <TextView
                    android:id="@+id/tvPayment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_check_circle"
                    android:gravity="center_vertical"
                    android:text="Paytm"
                    android:textSize="14sp"
                    android:ellipsize="end"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/login_edittext_undrln_color"
                android:visibility="gone"/>

            <RelativeLayout
                android:id="@+id/llPromo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:clickable="false">

                <TextView
                    android:id="@+id/tvPromo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/promo_code"
                    android:textSize="10sp"
                    android:textAllCaps="true"/>

                <EditText
                    android:id="@+id/etPromo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvPromo"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_promo"
                    android:drawablePadding="5dp"
                    android:hint="@string/have_a_promo_code_enter_it_here"
                    android:textSize="12sp"
                    android:maxLength="12"/>

                <TextView
                    android:id="@+id/tvApply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:text="@string/apply"
                    android:textSize="10sp"
                    android:textAllCaps="true"
                    android:textColor="@color/green"/>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/your_cart"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="bottom"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:background="@color/green"
        android:text="Checkout"
        android:textColor="@android:color/white"/>

</android.support.design.widget.CoordinatorLayout>