<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:id="@+id/cod_layout">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetStartWithNavigation="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/cardItem"
            android:padding="8dp"
            android:text="Top Places near you"
            android:textSize="18sp"
            android:textAllCaps="true"/>

        <android.support.v7.widget.CardView
            android:id="@+id/cardItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@android:color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.complexgene.eatbud.views.DiagonalLayout
                    android:id="@+id/diagonalLayout"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    diagonal:diagonal_angle="10"
                    android:paddingBottom="16dp"
                    diagonal:diagonal_direction="left"
                    diagonal:diagonal_position="bottom">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/veg_thali"/>

                </com.complexgene.eatbud.views.DiagonalLayout>

                <TextView
                    android:id="@+id/tvItemNane"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/diagonalLayout"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/app_name"
                    android:textSize="18sp"
                    android:maxLines="1"/>

                <TextView
                    android:id="@+id/tvItemDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvItemNane"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/about"
                    android:maxLines="1"/>

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvItemDesc"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/round_tv_bg"
                    android:text="DELIVERED"
                    android:textSize="12sp"
                    android:textColor="@android:color/white"
                    android:textAllCaps="true"
                    android:maxLines="1"/>

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvStatus"
                    android:layout_below="@+id/tvItemDesc"
                    android:progressDrawable="@drawable/custom_ratingbar_selector"
                    android:numStars="5"
                    android:stepSize="0.2"
                    android:rating="3.0" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/comment_shadow_bg"
            android:layout_above="@+id/rlDoComment">

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlDoComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:orientation="horizontal"
            android:background="#F3F3F3"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_alignParentBottom="true">

            <ImageButton
                android:id="@+id/imvSend"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_comment_send"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

            <EditText
                android:id="@+id/et_do_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="200dp"
                android:minHeight="50dp"
                android:hint="@string/leave_a_comment"
                android:inputType="textCapSentences|textMultiLine"
                android:background="@android:color/transparent"
                android:layout_toLeftOf="@+id/imvSend"/>

        </RelativeLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>